# rust_learn_wgpu

./: Cargo.toml
Pipeline/: Cargo.toml
Pipeline/shaders/: learn_wgpu_shader.wgsl
Pipeline/src/: main.rs
