[package]
name = "rust_learn_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
# ---- NEW DEPS -----
bytemuck = { version = "1.18", features = ["derive"] }
cgmath = "0.18"
eframe = { version = "0.29", features = ["wgpu"] }